package ch.scs.jumpstart.movierental.exercise.common.entity;

public enum PriceCode {
  CHILDREN,
  NEW_RELEASE,
  REGULAR
}
