package ch.scs.jumpstart.movierental.exercise.refactor.controller;

import ch.scs.jumpstart.movierental.exercise.refactor.rentalstatement.RentalStatement;
import org.springframework.stereotype.Component;

@Component
public class RentalStatementTextFormatter {
  public String format(RentalStatement rentalStatement) {
    // TODO
    return null;
  }
}
